--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="cabecalho">
 
 
-<img class="cabecalho-imagem" src="C:\Users\marin\Desktop\Ladding Page\assets\img- logo.webp" style="margin-right: 45%;">
+<img class="cabecalho-imagem" src="assets/img- logo.webp" style="margin-right: 45%;">
 
 
     <nav class="cabecalho-menu">
@@ -53,23 +53,23 @@
   <div class="coluna-1">
     
  
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\img1 -historias-originais.jpg" style="width:84%">
+    <a href= ""><img src="assets/img1 -historias-originais.jpg" style="width:84%">
     <figcaption> Histórias Originais</figcaption></a>
 
   </div>
   <div class="coluna-1">
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\img2-animes-mangas.jpg"style="width:84%">
+    <a href= ""><img src="assets/img2-animes-mangas.jpg"style="width:84%">
     <figcaption>Animes e Mangás</figcaption></a>
 
   </div>
   <div class="coluna-1">
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\img3-filmes.jpg" style="width:84%">
+    <a href= ""><img src="assets/img3-filmes.jpg" style="width:84%">
     <figcaption>Filmes e Séries</figcaption></a>
 
   </div>
 
   <div class="coluna-1">
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\img4-bandas-musicos.jpg" style="width:84%">
+    <a href= ""><img src="assets/img4-bandas-musicos.jpg" style="width:84%">
     <figcaption>Bandas e Músicos</figcaption></a>
 
 
@@ -79,23 +79,23 @@
   
 <div class="row">
   <div class="coluna-2">
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\coluna2-livros.jpg"style="width:84%">
+    <a href= ""><img src="assets/coluna2-livros.jpg"style="width:84%">
     <figcaption>Livros</figcaption></a>
 
   </div>
   <div class="coluna-2">
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\coluna2-games.jpg" style="width:84%">
+    <a href= ""><img src="assets/coluna2-games.jpg" style="width:84%">
     <figcaption>Games</figcaption></a>
 
   </div>
   <div class="coluna-2">
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\colun2-mitologia-lenda.jpg" style="width:84%">
+    <a href= ""><img src="assets/colun2-mitologia-lenda.jpg" style="width:84%">
     <figcaption>Mitologias e Lendas</figcaption></a>
 
   </div>
 
   <div class="coluna-2">
-    <a href= ""><img src="C:\Users\marin\Desktop\Ladding Page\assets\coulna2-quadrinhos.jpg"style="width:84%">
+    <a href= ""><img src="assets/coulna2-quadrinhos.jpg"style="width:84%">
     <figcaption>Quadrinhos</figcaption></a>
 
 
@@ -108,7 +108,7 @@
   <footer class="rodape">
    
 
-     <img src="C:\Users\marin\Desktop\Ladding Page\assets\img- rodape.png"class="rodape-imagem">
+     <img src="assets/img- rodape.png"class="rodape-imagem">
 
 
       <p  class="rodape__copyright">  &copy;  Copyright BirdNest  </p>
