--- a/index.html
+++ b/index.html
@@ -1,249 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Uma plataforma para você escrever e encontrar livros"
-    />
-    <title>BirdNest - Cadastre-se também</title>
-    <link href="C:\Users\marin\Desktop\Ladding Page\icon- my pagge.jpg" />
-    <link rel="stylesheet" type="text/css" href="assets/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="shortcut icon" href="assets/Imgs/corvo-icon.jpeg" type="image/x-icon">
-<script defer src="assets/app.js"></script>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
-      </style>
-      
-
+    <title>BirdNest</title>
   </head>
-<body>
-  
-<div class="cor-personalizada">
-  <div class="menu-cabecalho">
-    <img class="imagem-menu" src="assets/img- logo.webp" alt="logo" />
-
-    <nav id="menu">
-      <ul>
-        <li><a id="id-menu"   href="file:///home/meg/Desktop/Ladding%20Page/index.html">Home</a></li>
-        <li><a  id="id-menu"   href="#">Sobre</a></li>
-        <li><a id="id-menu"   href="https://github.com/MegMinnie">Contato</a></li>
-      </ul>
-    </nav>
-
-    <div class="meus-botoes">
-      <button class="botao">Faça seu Login</button>
-      <button class="botao">Cadastre-se</button>
-    </div>
-  </div>
-  </header>
-  <section class="conteudo-principal">
-    <h1>BirdNest</h1>
-    <p>O BirdNest é um espaço para escrever seu livro, seja no formato de Histórias Originais ou de Fanfics, além de <br>permitir acessar outras narrativas.</p>
-    <button class="cadastro">CADASTRE-SE JÁ GRÁTIS!</button>
-  </section>
-</div>
-
-<section class="conteudo-secundario">
-  
-  <a href="#">Animes / Mangás</a>
-  <a href="#">Bandas / Músicos</a>
-  <a href="#">Celebridades</a>
-  <a href="#">Cartoons</a>
-  <a href="#">Filmes</a>
-  <a href="#">Histórias Originais</a>
-  <a href="#">Jogos</a>
-  <a href="#">Livros</a>
-  <a href="#">Mitologias / Lendas</a>
-  <a href="#">Poesia</a>
-  <a href="#">Quadrinhos</a>
-  <a href="#">Seriados / Novelas / Doramas</a>
-
-  
-
-</section>
-  
-<section class="conteudo-terciario">
-  <h1>Dê asas a sua imaginação</h1>
-
-<p>Encontre histórias de diversos gêneros, troque ideias, faça <br> amigos,personalize seu perfil e compartilhe com o mundo<br> sua criatividade!</p>
-</section>
-
-<section class="apresentacao-pagina">
-
-  <div class="primeira-sessao" >
-  <img class="img-1"   src="assets/Imgs/verdades-ocultas.jpg" alt="Verdades Ocultas">
-  <div container>
-  <h3   class="titulo-principal">Verdades Ocultas</h3>
-  <p  class="assunto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining e unchanged."At vero eos et accusamus um deleniti atque.
-  <div categorias>
-  <button class="categoria-botao">16+</button>
-  <a  id="tags"  href="#">HISTÓRIAS ORIGINAIS</a>
-  <a id="tags"  href="#">HORROR</a>
-  <a id="tags"  href="#">SUSPENSE</a>
-  <a id="tags"  href="#">AÇÃO</a>
-</div>
-<div class="icones">
-  <div class="sobre-usuario">
-    <img id="usuario"  width="20px" src="assets/Imgs/mari-guera.png" alt="">
-    <span class="nome-usuario">Mari Guerra</span>
-  </div>
-  
-  <div class="botoes-interacao">
-    <i class="bi bi-heart"></i>
-   <i class="bi bi-share-fill"></i>
-
-</div>
-  
-</div>
-</div>
-</div>
-
-<div class="primeira-sessao" >
-  <img class="img-1"   src="assets/Imgs/Olhos-oceano.jpg" alt="Olhos de oceano">
-  <div container>
-  <h3   class="titulo-principal">Olhos de Oceano (Levi Ackerman)</h3>
-  <p  class="assunto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining e unchanged."At vero eos et accusamus um deleniti atque.
-  </p>
-  <div categorias>
-    <button class="categoria-botao">16+</button>
-    <a  id="tags"  href="#">ANIME</a>
-    <a id="tags"  href="#">ROMANCE</a>
-    <a id="tags"  href="#">FANTASIA</a>
-    <a id="tags"  href="#">SHINGEKI NO KYOJIN</a>
-  </div>
-  <div class="icones">
-    <div class="sobre-usuario">
-      <img id="usuario"  width="20px" src="assets/Imgs/mr.oliver.jpeg" alt="">
-      <span class="nome-usuario">Mr. Oliver</span>
-    </div>
-    <div class="botoes-interacao">
-      <i class="bi bi-heart"></i>
-      <i class="bi bi-share-fill"></i>
-  
-  </div>
-    </div>
-</div>
-</div>
-
-
-<div class="primeira-sessao" >
-  <img class="img-1"   src="assets/Imgs/Procura-homem-perfeito.jpg" alt="A Procura do Homem Perfeito">
-  <div container>
-  <h3   class="titulo-principal">A Procura do Homem Perfeito</h3>
-  <p  class="assunto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining e unchanged."At vero eos et accusamus um deleniti atque.</p>
-  <div categorias>
-    <button class="categoria-botao">18+</button>
-    <a  id="tags"  href="#">HISTÓRIAS ORIGINAIS</a>
-    <a id="tags"  href="#">FICÇÃO POLICIAL</a>
-    <a id="tags"  href="#">SUSPENSE</a>
-    <a id="tags"  href="#">AÇÃO</a>
-  </div>
-  <div class="icones">
-    <div class="sobre-usuario">
-      <img id="usuario"  width="20px" src="assets/Imgs/fada-gotica.jpeg" alt="">
-      <span class="nome-usuario">Fada Gótica</span>
-    </div>
-    <div class="botoes-interacao">
-      <i class="bi bi-heart"></i>
-      <i class="bi bi-share-fill"></i>
- 
-  </div>
-    </div>
-</div>
-</div>
-
-
-<div class="primeira-sessao" >
-  <img class="img-1"   src="assets/Imgs/Ate-fim.jpg" alt="Até o fim">
-  <div container>
-  <h3   class="titulo-principal">Até o fim</h3>
-  <p  class="assunto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining e unchanged."At vero eos et accusamus um deleniti atque.</p>
-  <div categorias>
-    <button class="categoria-botao">12+</button>
-    <a  id="tags"  href="#">MITOLOGIA</a>
-    <a id="tags"  href="#">FANTASIA</a>
-    <a id="tags"  href="#">HISTÓRIAS ORIGINAIS</a>
-    <a id="tags"  href="#">ROMANCE</a>
-  </div>
-  <div class="icones">
-    <div class="sobre-usuario">
-      <img id="usuario"  width="20px" src="assets/Imgs/duende-verde.jpeg" alt="">
-      <span class="nome-usuario">Duende verde</span>
-    </div>
-    <div class="botoes-interacao">
-      <i class="bi bi-heart"></i>
-      <i class="bi bi-share-fill"></i>
- 
-  </div>
-    </div>
-</div>
-</div>
-
-
-<div class="primeira-sessao" >
-  <img class="img-1"   src="assets/Imgs/mundo-kira.jpg" alt="O mundo de Kira">
-  <div container>
-  <h3   class="titulo-principal">O Mundo de Kira (Death Note)</h3>
-  <p  class="assunto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining e unchanged."At vero eos et accusamus um deleniti atque.</p>
-  <div categorias>
-    <button class="categoria-botao">12+</button>
-    <a  id="tags"  href="#">ANIME</a>
-    <a id="tags"  href="#">FICÇÃO POLICIAL</a>
-    <a id="tags"  href="#">FANTASIA</a>
-    <a id="tags"  href="#">DEATH NOTE</a>
-  </div>
-  <div class="icones">
-    <div class="sobre-usuario">
-      <img id="usuario"  width="20px" src="assets/Imgs/andrey-grau.jpeg" alt="">
-      <span class="nome-usuario">Andrey do Grau</span>
-    </div>
-    <div class="botoes-interacao">
-      <i class="bi bi-heart"></i>
-      <i class="bi bi-share-fill"></i>
- 
-  </div>
-    </div>
-</div>
-</div>
-
-
-<div class="primeira-sessao" >
-  <img class="img-1"   src="assets/Imgs/Verdade-Missipi.jpg" alt="A verdade sobre Missisipi">
-  <div container>
-  <h3   class="titulo-principal">A verdade Sobre Missisipi</h3>
-  <p  class="assunto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining e unchanged."At vero eos et accusamus um deleniti atque. </p>
-  <div categorias>
-    <button class="categoria-botao">18+</button>
-    <a  id="tags"  href="#">LENDA URBANA</a>
-    <a id="tags"  href="#">TERROR</a>
-    <a id="tags"  href="#">SUSPENSE</a>
-    <a id="tags"  href="#">MISTÉRIO</a>
-    
-  </div>
-  <div class="icones">
-    <div class="sobre-usuario">
-      <img id="usuario"  width="20px" src="assets/Imgs/corvo-negro.jpeg" alt="">
-      <span class="nome-usuario">Corvo Negro</span>
-    </div>
-    <div class="botoes-interacao">
-      <i class="bi bi-heart"></i>
-      <i class="bi bi-share-fill"></i>
-  </svg>
-  </div>
-    </div>
-</div>
-</div>
-</section>
-  
-<footer class="rodape">
-
-  <img  class="img-rodape"  src="assets/Imgs/img- rodape (copy 1).png" alt="logo-rodape">
-  <p  class="rodape__copyright">  &copy;  Copyright BirdNest - 2023 </p>
-  
-</footer>
-
-</body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
